Added a test for using cgroup limits